# tip-generator

./: .env.example  .gitignore  AGENTS.md  LICENSE  PUBLISH.md  README.md  SKILL.md  config.json  example.config.json  pyproject.toml  release.sh  tip_generator.py  tip_viewer.py  url_cache.py
.github/workflows/: publish.yml  release.yml  test.yml
src/tip_generator/: MANIFEST.in  __init__.py  url_cache.py  viewer.py
src/tip_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tip_generator/static/: style.css
src/tip_generator/templates/: about.html  index.html
static/: style.css
templates/: about.html  index.html
tests/: conftest.py  test_cli.py  test_config.py  test_paths.py  test_pure.py  test_tip_parsing.py  test_tip_storage.py  test_url_cache.py  test_viewer.py
