[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "drupaltools-tip-generator"
version = "0.1.0"
description = "Generate static MD tip files for Drupal development tips using various LLM providers"
readme = "README.md"
license = "GPL-2.0-or-later"
authors = [
    {name = "Drupal Tools Team", email = "info@drupaltools.com"}
]
 keywords = ["drupal", "tips", "llm", "generator", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
 requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/drupaltools/tip-generator"
Repository = "https://github.com/drupaltools/tip-generator.git"
Issues = "https://github.com/drupaltools/tip-generator/issues"

[project.scripts]
drupaltools-tip-generator = "tip_generator:main"

[tool.setuptools.package-data]
tip_generator = ["templates/*.html", "config.json"]

[tool.setuptools]
include-package-data = false
